amended some image file paths

--- a/_includes/home_project.html
+++ b/_includes/home_project.html
@@ -1,12 +1,12 @@
 <div data-picture data-alt="[{{ include.proj }}">
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg"></div>
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg" data-media="(max-width:600px)"></div>
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width:601px)"></div>
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width:601px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width: 1008px)"></div>
-  <div data-src="/img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg" data-media="(max-width:600px)"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width:601px)"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width:601px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width: 1008px)"></div>
+  <div data-src="img/{{ page.name }}/{{ include.size }}.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
   <noscript>
-    <img src="/img/{{ include.proj }}/{{ include.size }}.jpg" alt="[colors-lab]:type">
+    <img src="img/{{ include.proj }}/{{ include.size }}.jpg" alt="[colors-lab]:type">
   </noscript>
 </div>
