setting baseurl to correctly load assets in github pages

--- a/_includes/homepage_project.html
+++ b/_includes/homepage_project.html
@@ -1,14 +1,14 @@
 <a href="{{ include.proj }}">
   <div data-picture data-alt="{{ include.proj }}">
-    <div data-src="img/home/{{ include.proj }}.jpg"></div>
-    <div data-src="img/home/{{ include.proj }}.jpg" data-media="(max-width:600px)"></div>
-    <div data-src="img/home/{{ include.proj }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-    <div data-src="img/home/{{ include.proj }}.jpg" data-media="(min-width:601px)"></div>
-    <div data-src="img/home/{{ include.proj }}.jpg" data-media="(min-width:601px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-    <div data-src="img/home/{{ include.proj }}.jpg" data-media="(min-width: 1008px)"></div>
-    <div data-src="img/home/{{ include.proj }}.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" data-media="(max-width:600px)"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" data-media="(min-width:601px)"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" data-media="(min-width:601px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" data-media="(min-width: 1008px)"></div>
+    <div data-src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
     <noscript>
-      <img src="img/home/{{ include.proj }}.jpg" alt="[colors-lab]:type">
+      <img src="{{ site.baseurl }}/img/home/{{ include.proj }}.jpg" alt="[colors-lab]:type">
     </noscript>
   </div>
 </a>
