tidied up some comments

--- a/_layouts/project_template_two.html
+++ b/_layouts/project_template_two.html
@@ -16,7 +16,7 @@ layout: project
         <p class="bentonsanslight">{{ page.description }}</p>
         <p class="bentonsansmedium"><b><a href="{{ page.link }}">{{ page.linktext }}</a></b></p>
       </div>
-    </div> <!-- end project -->
+    </div>
 
     <div class="project eight">
 		{% include home_project.html size="750-mobile" %}
