--- a/_layouts/project_template_two.html
+++ b/_layouts/project_template_two.html
@@ -3,7 +3,7 @@ layout: project
 ---
 
 <div class="one">
-	{% include home_project.html size="1200x360" %}
+	{% include picturefill.html file="1200x360" %}
 </div>
 
 <div id="container">
@@ -19,11 +19,11 @@ layout: project
     </div>
 
     <div class="project eight">
-		{% include home_project.html size="750-mobile" %}
+		{% include picturefill.html file="750-mobile" %}
     </div>
         
     <div class="project ten">
-    	{% include home_project.html size="750" %}
+    	{% include picturefill.html file="750" %}
 	</div>
 
     <p style="clear:both">&nbsp;</p>
