--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@
   <title>{{ page.title }}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <script src="{{ site.baseurl }}/js/picturefill.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/modernizr.custom.17424.js" type="text/javascript"></script>
+  <script src="{{ site.baseurl }}/js/js.js" type="text/javascript"></script>
   <link href="{{ site.baseurl }}/css/style.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="//cloud.webtype.com/css/732e499d-326d-4cb1-b4ee-d647770deb32.css" rel="stylesheet" type="text/css" />
 </head>
