--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
   <link href="//cloud.webtype.com/css/732e499d-326d-4cb1-b4ee-d647770deb32.css" rel="stylesheet" type="text/css" />
 </head>
   
-<body class="{{ page.class }} fixed-height">
+<body class="{{ page.class }} {{ page.font }} fixed-height">
 
   {% include header.html %}  
 
