bunch of CSS amendments, mostly text sizing

--- a/_layouts/project_template_two.html
+++ b/_layouts/project_template_two.html
@@ -11,11 +11,11 @@ font: colfax
 
 	<div class="project nine description">
       <div>
-        <h2 class="bentonsanslight">{{ page.index }}</h2>
+        <h2>{{ page.index }}</h2>
         <h3 class="bentonsansmedium">{{ page.project }}</h3>
-        <h4 class="bentonsanslight">{{ page.client }}</h4>
-        <p class="bentonsanslight">{{ page.description }}</p>
-        <p class="bentonsansmedium"><b><a href="{{ page.link }}">{{ page.linktext }}</a></b></p>
+        <h4>{{ page.client }}</h4>
+        <p>{{ page.description }}</p>
+        <p class="link"><b><a href="{{ page.link }}">{{ page.linktext }}</a></b></p>
       </div>
     </div>
 
