--- a/_layouts/project_template_one.html
+++ b/_layouts/project_template_one.html
@@ -1,6 +1,5 @@
 ---
 layout: project
-font: colfax
 ---
 
 <div class="one">
@@ -12,7 +11,7 @@ font: colfax
     <div class="project nine description">
       <div>
         <h2>{{ page.index }}</h2>
-        <h3 class="bentonsansmedium">{{ page.project }}</h3>
+        <h3>{{ page.project }}</h3>
         <h4>{{ page.client }}</h4>
         <p>{{ page.description }}</p>
         <p class="link"><b><a href="{{ page.link }}">{{ page.linktext }}</a></b></p>
