--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="container">
     <header>
       <div id="header-inner">
-        <h1><a href="{{ site.baseurl }}" title="home">[suki-rai]</a></h1>
+        <h1><a href="{{ site.baseurl }}" title="home">suki rai</a></h1>
       </div>
     </header>
   </div>
