amended email address text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
       
       <div>
         <h2>/CONTACT</h2>
-        <p><a href="mailto:suki@suki-rai.com">hello@suki-rai.com</a></p>
+        <p><a href="mailto:suki@suki-rai.com">suki@suki-rai.com</a></p>
         <p><a href="http://twitter.com/miscondukt">twitter</a></p>
       </div>
 
