--- a/_includes/project_description.html
+++ b/_includes/project_description.html
@@ -1,7 +1,7 @@
 <div class="project nine description">
   <div>
     <h2>{{ page.index }}</h2>
-    <h3>{{ page.project }}</h3>
+    <h3>{{ page.title }}</h3>
     <h4>{{ page.client }}</h4>
     <p>{{ page.description }}</p>
     <p class="link"><b><a href="{{ page.link }}">{{ page.linktext }}</a></b></p>
