--- a/_includes/project_header.html
+++ b/_includes/project_header.html
@@ -1,3 +1,3 @@
 <div class="one">
-  {% include picturefill.html file="header" %}
+  {% include picturefill.html file="header" area="header" %}
 </div>
