line-height fix for project pages on ipad size screens

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -555,6 +555,10 @@ footer h2 {
   .description p {
     font-size: 0.8em;
   }
+
+  .projectpage .project p {
+    line-height: 1.7em
+  }
 }
 
 /* RETINA SCREENS */
