css fix for font weight

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -179,7 +179,7 @@ header p {
   font-weight: 500;
 }
 
-.project .info p:nth-child(2) a {
+.project .info p:nth-child(2) {
   font-size: $largeText;
   line-height: $mediumLeading;
   font-style: normal;
