--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ header p {
   margin-top: 0;
   font-weight: 500; }
 
-.project .info p:nth-child(2) a {
+.project .info p:nth-child(2) {
   font-size: 18px;
   line-height: 21px;
   font-style: normal;
