--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,11 @@
   <title>suki rai &mdash; {{ page.title }}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <script src="{{ site.baseurl }}/js/js.js" type="text/javascript"></script>
   <link href="{{ site.baseurl }}/css/style.css" media="screen" rel="stylesheet" type="text/css" />
+  <script src="{{ site.baseurl }}/js/js.js" type="text/javascript"></script>
+  <script type="text/javascript" src="//use.typekit.net/qeg2xbg.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
   
 <body class="{{ page.class }}">
