--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link href="{{ site.baseurl }}/css/style.css" media="screen" rel="stylesheet" type="text/css" />
   <script src="{{ site.baseurl }}/js/js.js" type="text/javascript"></script>
-  
+  <script type="text/javascript" src="//use.typekit.net/qeg2xbg.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
   
 <body class="{{ page.class }}">
