refactored a load of CSS. added webfonts and removed typekit. added a bit to the readme so i can remember how to add new projects to the site.

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,6 @@
 <script>
     if ( !Modernizr.touch ) {
-      var header = document.querySelector('.one');
+      var header = document.querySelector('body > .project');
       var container = document.querySelector('#container');
       var origOffsetY = header.offsetHeight;
       function onScroll(e) {
