--- a/assets/style.scss
+++ b/assets/style.scss
@@ -7,13 +7,13 @@ $largeText: 18px;
 $largerText: 24px;
 $hugeText: 36px;
 
-$smallestLeading: 12px;
-$smallLeading: 18px;
-$mediumLeading: 21px;
-$largeLeading: 24px;
-$largerLeading: 28px;
-$largestLeading: 36px;
-$hugeLeading: 40px;
+$smallestLeading: 1em;
+$smallLeading: 1em;
+$mediumLeading: 1em;
+$largeLeading: 1em;
+$largerLeading: 1em;
+$largestLeading: 1em;
+$hugeLeading: 1em;
 
 $textColorOne: #000;
 $textColorTwo: #363636;
@@ -21,6 +21,10 @@ $textColorThree: #555;
 $textColorFour: #aaa;
 
 /* Global Reset */
+* { 
+  box-sizing: border-box;
+}
+
 html, body { height: 100%; }
 
 body {
@@ -38,6 +42,24 @@ html, body, div, img, p, h1, h2, h3, h4, a {
 h1 {
   font-weight: 400;
   float: left;
+}
+
+@font-face {
+  font-family: 'colfax-web';
+  font-weight: 300;
+  font-style: normal;
+  src: url('../fonts/ColfaxWebLight.eot');
+  src: url('../fonts/ColfaxWebLight.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/ColfaxWebLight.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'colfax-web';
+  font-weight: 400;
+  font-style: normal;
+  src: url('../fonts/ColfaxWebRegular.eot');
+  src: url('../fonts/ColfaxWebRegular.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/ColfaxWebRegular.woff') format('woff');
 }
 
 html, body, h1 {
@@ -91,10 +113,6 @@ header h1 {
   vertical-align: middle;
 }
 
-#container {
-  min-height: 720px;
-}
-
 .container {
   height: 63px;
 }
@@ -121,10 +139,12 @@ header p {
 
 .project {
   float: left;
-  width: 240px;
-  height: auto;
   position: relative;
 }
+
+/****************************/
+/* mostly type */
+/****************************/
 
 .project p,
 .project h2,
@@ -154,6 +174,7 @@ header p {
 .projectpage .project p {
   font-size: $smallText;
   line-height: $largeLeading;
+
 }
 
 .projectpage .project b a {
@@ -167,23 +188,28 @@ header p {
   font-weight: 400;
 }
 
-.project .info p:nth-child(2) {
+.project .info p:nth-child(1) {
   font-size: $largeText;
-  line-height: $mediumLeading;
-  font-style: normal;
-  font-weight: 400; 
+  line-height: $largeLeading;
+  font-weight: 300;
+}
+
+.project .info p:nth-child(2) {
+  font-size: $largerText;
+  line-height: $largeLeading;
+  font-weight: 400;
 }
 
 .project .info p:nth-child(3) {
-  font-size: $smallestText;
-  line-height: $largeLeading;
+  font-size: $mediumText;
+  line-height: $mediumLeading;
   text-transform: uppercase;
+  font-weight: 300;
 }
 
 .project .info {
   text-align: left;
-  padding: 0 5px;
-  min-height: 70px;
+  padding: 0 5px 0 0;
 }
 
 .project img {
@@ -200,6 +226,10 @@ footer {
   font-size: $smallText;
   line-height: $largeLeading;
 }
+
+/****************************/
+/* end of type */
+/****************************/
 
 footer a,
 footer a:visited,
@@ -222,8 +252,6 @@ footer h2 {
   background-color: #fff;
   height: auto;
   text-align: left;
-  padding: 15px;
-  width: 474px;
 }
 
 .description h2,
@@ -243,7 +271,7 @@ footer h2 {
 }
 
 .projectpage .browser-screenshot {
-  width: 795px;
+  width: 100%;
   height: auto;
 }
 
@@ -253,21 +281,26 @@ footer h2 {
   height: auto;
 }
 
-.one {
+/* first project only - the big header image on every screen */
+body > .project {
   text-align: center;
   overflow: hidden;
-  margin-bottom: $standardSpacing;
   height: 360px;
+  width: 100%;
+}
+
+.project {
+  margin-bottom: $standardSpacing;
 }
 
 /* SMALL SCREENS */
 /*****************/
 @media screen and (max-width: 600px) {
-  .one {
+  body > .project {
     height: 180px;
   }
 
-  .one img {  
+  body > .project img {  
     width: 600px;
     height: 180px;
     margin-left: -150%;
@@ -275,21 +308,20 @@ footer h2 {
   }
 
   .description {
-    background-color: #fff;
     text-align: left;
     padding: 0;
-    width: 95%;
     height: auto;
   }
 
+  /* calculate required number of copy lines * their font sizes + any leading + any padding */
   .project .info {
-    min-height: 128px;
+    min-height: ($largeText * 4) + ($largerText * 2);
   }
 }
 
 @media screen and (min-width: 601px) {
 
-  .one img {
+  body > .project img {
     height: 360px;
     width: 1200px;
     margin-left: -150%;
@@ -299,13 +331,7 @@ footer h2 {
 
 @media screen and (max-width: 749px) {
 
-  html {
-    background: #fff;
-  }
-
   #container,
-  .container,
-  #header-inner,
   #footer-inner {
     width: 95%;
   }
@@ -315,6 +341,7 @@ footer h2 {
   }
 
   .container {
+    width: auto;
     height: auto;
   }
 
@@ -322,19 +349,14 @@ footer h2 {
     margin-top: $standardSpacing;
     margin-bottom: $standardSpacing;
     width: 100%;
-    height: 24px;
-  }
-
-  #header-inner {
-    width: 100%;
+    height: 44px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 2.5%
   }
 
   .project:nth-child(odd) {
     clear: left;
-  }
-
-  .project {
-    margin-bottom: $standardSpacing;
   }
 
   .project p {
@@ -342,36 +364,7 @@ footer h2 {
     line-height: $largestLeading;
   }
 
-  .project .info {
-    padding: 4px 5px 0 5px;
-    background-color: #f2f2f2;
-  }
-
-  .project .info p:nth-child(2) {
-    line-height: $largerLeading;
-  }
-
-  .project .info p:nth-child(3) {
-    font-size: $largeText;
-    line-height: $largeLeading;
-    text-transform: uppercase;
-  }
-
-  .one {
-    width: 100%;
-    margin-bottom: $standardSpacing;
-  }
-
-  .two,
-  .three,
-  .four,
-  .five,
-  .six,
-  .seven,
-  .eight,
-  .nine,
-  .ten,
-  .eleven {
+  .project {
     width: 50%;
   }
 
@@ -383,6 +376,10 @@ footer h2 {
     width: 100%;
     height: auto;
   }
+
+  .description {
+    padding: 2.5%
+  }
 }
 
 @media screen and (min-width: 750px) {
@@ -392,9 +389,14 @@ footer h2 {
     width: 295px;
   }
 
+  .description {
+    padding: 2.5%;
+  }
+
   h1 {
     margin-left: $standardSpacing;
   }
+
 }
 
 @media screen and (min-width: 750px) and (max-width: 1007px) {
@@ -414,30 +416,22 @@ footer h2 {
   }
 
   .project {
-    margin-bottom: $standardSpacing;
-  }
-
-  .one {
-    float: right;
-    width: 100%;
-  }
-
-  .two,
-  .three,
-  .four,
-  .five,
-  .six,
-  .seven,
-  .ten,
-  .eleven {
     width: 250px;
     height: 350px;
   }
 
   .description {
     float: right;
-    width: 345px;
-    height: 345px;
+    width: 375px;
+    height: 375px;
+  }
+
+  .project:nth-of-type(7),
+  .project:nth-of-type(8),
+  .project-image-one,
+  .projectpage .project-image-three {
+    width: 375px;
+    height: 475px;
   }
 
   .projectpage .project-image-two {
@@ -450,14 +444,6 @@ footer h2 {
   .browser-screenshot {
     width: 100%;
     height: auto;
-  }
-
-  .eight,
-  .nine,
-  .project-image-one,
-  .projectpage .project-image-three {
-    width: 375px;
-    height: 475px;
   }
 
   .projectpage .project p {
@@ -510,17 +496,16 @@ footer h2 {
     margin-top: 369px;
   }
 
-  .one {
-    width: 100%;
+  body > .project {
     z-index: 100;
   }
 
-  .one img {
+  body > .project img {
     max-width: 1200px;
   }
 
-  .eight,
-  .nine,
+  .project:nth-of-type(7),
+  .project:nth-of-type(8),
   .project-image-one {
     width: 504px;
     height: 604px;
@@ -535,8 +520,8 @@ footer h2 {
   }
 
   .description {
-    width: 440px;
-    height: 440px;
+    width: 504px;
+    height: 504px;
     padding: 32px;
     float: right;
   }
