--- a/_includes/picturefill.html
+++ b/_includes/picturefill.html
@@ -7,6 +7,7 @@
   
   {% if page.path == 'home' and include.area == "header" %}
     <div data-src="{{ site.baseurl }}/{{ include.file }}/{{ include.file }}_m.jpg" data-media="(max-width:600px)"></div>
+    <div data-src="{{ site.baseurl }}/{{ include.file }}/{{ include.file }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
     <div data-src="{{ site.baseurl }}/{{ include.file }}/{{ include.file }}.jpg" data-media="(min-width:601px)"></div>
     <div data-src="{{ site.baseurl }}/{{ include.file }}/{{ include.file }}.jpg" data-media="(min-width: 1008px)"></div>
     <div data-src="{{ site.baseurl }}/{{ include.file }}/{{ include.file }}.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
