--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
     <div id="footer-inner">
       
       <div>
-        <h2>/CONTACT</h2>
+        <h2>/contact</h2>
         <p><a href="mailto:suki@suki-rai.com">suki@suki-rai.com</a></p>
-        <p><a href="http://twitter.com/miscondukt">twitter</a></p>
+        <p><a href="http://twitter.com/miscondukt">@miscondukt</a></p>
       </div>
 
       <div style="clear:both;float: none;"></div>
