--- a/css/style.css
+++ b/css/style.css
@@ -354,10 +354,7 @@ body > .project {
 
   .browser-screenshot {
     width: 100%;
-    height: auto; }
-
-  .projectpage .project p {
-    line-height: 1.7em; } }
+    height: auto; } }
 @media screen and (max-width: 1007px) {
   footer {
     float: left;
